This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: os.ttyname() and os.ctermid() don't decode result according to PEP 383
Type: behavior Stage:
Components: Extension Modules Versions: Python 3.1, Python 3.2
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: baikie, vstinner
Priority: normal Keywords: patch

Created on 2010-08-14 19:09 by baikie, last changed 2022-04-11 14:57 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
ttyname-ctermid-pep383.diff baikie, 2010-08-14 19:09 Make ttyname() and ctermid() decode path according to PEP 383
Messages (2)
msg113920 - (view) Author: David Watson (baikie) Date: 2010-08-14 19:09
These functions each return the path to a terminal, so they should use PyUnicode_DecodeFSDefault().  Patch attached.
msg113945 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2010-08-15 09:15
Commited to 3.1 as r84061 and to 3.2 as r84060. Thanks David.
History
Date User Action Args
2022-04-11 14:57:05adminsetgithub: 53812
2010-08-15 09:15:15vstinnersetstatus: open -> closed
resolution: fixed
messages: + msg113945
2010-08-14 21:53:17pitrousetnosy: + vstinner
2010-08-14 19:09:12baikiecreate